# wt

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  GETTING-STARTED.md  MANUAL-TESTS.md  Makefile  README.md  TESTS.md  TODO.md  WORKSPACE.md  bare-metal-worlds.md  idealized-api.md  isolation-without-port-overrides.md  plan.md  problem-statement.md  the-devcontainer-issue.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
assets/: app-shell.sh  git-ssh.sh  install-guest-git.sh  install-guest.sh  install-server-host.sh  setup-world-root.sh  setup-world.sh
client-config/: README.md  wt.development.toml
config/: README.md  wt-local.development.toml  wt-server.development.toml
crates/wt/: Cargo.toml  README.md
crates/wt-agent/: Cargo.toml  README.md
crates/wt-agent/src/: main.rs
crates/wt-api/: Cargo.toml  README.md  build.rs
crates/wt-api/src/: lib.rs
crates/wt-cli/: Cargo.toml  README.md
crates/wt-cli/src/: config.rs  inventory.rs  lib.rs  main.rs  ssh.rs  transport.rs
crates/wt-cli/src/snapshots/: wt__tests__empty_instance_table.snap  wt__tests__instance_table.snap  wt__tests__instance_table_with_error.snap  wt_cli__ssh__tests__duplicate_world_names_ssh_config.snap  wt_cli__ssh__tests__remote_worlds_ssh_config.snap  wt_cli__ssh__tests__setup_world_known_hosts.snap  wt_cli__ssh__tests__setup_world_ssh_config.snap  wt_cli__ssh__tests__static_world_server_proxy_config.snap  wt_cli__ssh__tests__unique_world_ssh_config.snap  wt_cli__ssh__tests__updated_world_known_hosts.snap
crates/wt-cli/tests/: .automatic_sync.rs.pending-snap  automatic_sync.rs  code.rs
crates/wt-cli/tests/snapshots/: automatic_sync__automatically_synced_ssh_config.snap
crates/wt-command/: Cargo.toml  README.md
crates/wt-command/src/: lib.rs
crates/wt-guest/: Cargo.toml  README.md
crates/wt-guest/src/: lib.rs  main.rs
crates/wt-integration-tests/: Cargo.toml  README.md  fixture-images.txt
crates/wt-integration-tests/src/: lib.rs
crates/wt-integration-tests/tests/: kvm_e2e.rs  service.rs
crates/wt-libvirt/: Cargo.toml  README.md
crates/wt-libvirt/src/: config.rs  lib.rs  worker.rs
crates/wt-libvirt/src/worker/: devcontainer.rs  git.rs  guest_agent.rs  world.rs
crates/wt-local/: Cargo.toml  README.md
crates/wt-local-setup/: Cargo.toml  README.md
crates/wt-local-setup/src/: files.rs  host.rs  image.rs  main.rs  runner.rs  site.rs  test_cache.rs
crates/wt-local/src/: config.rs  lib.rs  main.rs  service.rs  store.rs  worker.rs
crates/wt-local/src/worker/: libvirt.rs  qemu.rs
crates/wt-local/tests/: service_integration.rs
crates/wt-provider/: Cargo.toml
crates/wt-provider/src/: bootstrap.rs  devcontainer.rs  git.rs  lib.rs  provisioner.rs  transport.rs
crates/wt-server/: Cargo.toml  README.md
crates/wt-server-setup/: Cargo.toml  README.md
crates/wt-server-setup/src/: files.rs  host.rs  image.rs  install_input.rs  main.rs  registry_cache.rs  runner.rs  server.rs  test_cache.rs
crates/wt-server-setup/src/image/: recipe.rs
crates/wt-server-setup/src/snapshots/: wt_server_setup__install_input__tests__materialized_server_config.snap
crates/wt-server/migrations/00000000000000_create_instances/: up.sql
crates/wt-server/src/: config.rs  daemon.rs  jobs.rs  lib.rs  main.rs  operations.rs  runtime_config.rs  schema.rs  service.rs  store.rs
crates/wt-setup/: Cargo.toml  README.md
crates/wt-setup/src/: main.rs
crates/wt-static-ssh/: Cargo.toml
crates/wt-static-ssh/src/: lib.rs
crates/wt/src/: main.rs
docs/: plan.md  product.md
docs/adr/: 0001-agent-forwarded-first-ssh-provisioning.md  0002-route-new-byobu-panes-to-the-devcontainer.md  0003-forward-the-workstation-ssh-agent-to-devcontainers.md  0004-make-world-creation-interactive-and-request-owned.md  0005-disable-remain-on-exit-after-setup.md  0006-show-durable-world-metadata-in-ls.md  0006-show-the-current-git-checkout-in-the-byobu-title.md  0007-require-matching-client-and-server-commits.md  0007-use-diesel-for-registry-persistence.md  0008-allow-osc52-clipboard-through-byobu.md  0009-refresh-terminal-theme-through-byobu.md  0010-close-libvirt-connections.md  0011-exec-ssh-after-world-creation.md
docs/arch/: README.md  bare-metal-agent.md  cli.md  control-plane.md  k8s-agent.md  registry-cache.md
docs/how/: README.md  bare-metal-agent.md  cli.md  database.md  provider-api.md  registry-cache.md
docs/impl/: README.md
docs/issues/: 001-osc52-clipboard-blocked-by-byobu.md  002-terminal-theme-stale-through-byobu.md
docs/next-steps/: git-author-identity.md  more-providers.md  provider-api.md  static-ssh-provider.md
docs/next-steps/more-providers/: more-providers.md  provider-api.md  static-ssh-provider.md
docs/plan-reasoning/: bare-metal-worlds.md  idealized-api.md  isolation-without-port-overrides.md  problem-statement.md  the-devcontainer-issue.md
docs/what/: README.md
examples/: README.md
examples/client-config/: README.md  wt.development.toml
examples/server-config/: README.md  wt-server.development.toml  wt-server.static-ssh.toml
scripts/: bootstrap-server-user  clear  clear-server  install-client  install-server  install-site  prepare-image  prepare-test-image
server-config/: README.md
