[workspace]
resolver = "2"
members = [
    "crates/wt-api",
    "crates/wt-cli",
    "crates/wt-guest",
    "crates/wt-integration-tests",
    "crates/wt-libvirt",
    "crates/wt-local",
    "crates/wt-local-setup",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
wt-api = { path = "crates/wt-api" }
wt-libvirt = { path = "crates/wt-libvirt" }
wt-local = { path = "crates/wt-local" }
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
nix = { version = "0.31.2", features = ["user"] }
quick-xml = "0.39.2"
rpassword = "7.4.0"
base64 = "0.22.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
toml = "1.0.3"
uuid = { version = "1.21.0", features = ["serde", "v4"] }
virt = { version = "0.4.3", features = ["qemu"] }
