[workspace]
resolver = "2"
members = [
    "crates/wt-api",
    "crates/wt-cli",
    "crates/wt-command",
    "crates/wt-guest",
    "crates/wt-integration-tests",
    "crates/wt-libvirt",
    "crates/wt-server",
    "crates/wt-server-setup",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
wt-api = { path = "crates/wt-api" }
wt-command = { path = "crates/wt-command" }
wt-libvirt = { path = "crates/wt-libvirt" }
wt-server = { path = "crates/wt-server" }
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
nix = { version = "0.31.2", features = ["user"] }
quick-xml = "0.39.2"
base64 = "0.22.1"
insta = "1.47.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rpassword = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
ssh-key = { version = "0.6.7", features = ["encryption"] }
thiserror = "2.0.18"
toml = "1.0.3"
uuid = { version = "1.21.0", features = ["serde", "v4"] }
virt = { version = "0.4.3", features = ["qemu"] }
zeroize = { version = "1.9.0", features = ["derive"] }
