[package]
name = "wt-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Shared JSON types for wt CLI and agents"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
