[package]
name = "wt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "CLI client for the wt control-plane API (binary name: wt)"

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
wt-api = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
uuid = { workspace = true }
