[package]
name = "wt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Local wt workstation CLI (binary name: wt)"

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
wt-api = { workspace = true }
wt-command = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
cliclack = { workspace = true }
nix = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
ssh-key = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = "3.27.0"
uuid = { workspace = true }
