[package]
name = "wt-guest"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Guest-side programs injected by wt"

[[bin]]
name = "wt-app-shell"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
