[package]
name = "wt-guest"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Guest-side programs injected by wt"

[[bin]]
name = "wt-app-pane"
path = "src/main.rs"

[[bin]]
name = "wt-app-proxy"
path = "src/bin/wt-app-proxy.rs"

[[bin]]
name = "wt-app-info"
path = "src/bin/wt-app-info.rs"

[dependencies]
wt-command = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
