[package]
name = "wt-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
wt-api = { workspace = true }
wt-libvirt = { workspace = true }
wt-local = { workspace = true }
wt-cli = { path = "../wt-cli" }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.27.0"
