[package]
name = "wt-libvirt"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Libvirt/KVM world backend for wt"

[dependencies]
wt-api = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
virt = { workspace = true }
