[package]
name = "wt-libvirt"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Libvirt/KVM world backend for wt"

[dependencies]
wt-api = { workspace = true }
base64 = { workspace = true }
quick-xml = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ssh-key = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
virt = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
