[package]
name = "wt-local"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Single-site server: control plane + embedded bare-metal worker"

[[bin]]
name = "wt-local"
path = "src/main.rs"

[dependencies]
wt-api = { workspace = true }
# axum/hyper, tokio, libvirt or virsh, serde — add when implementing
