[package]
name = "wt-local"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Single-site server: control plane + embedded bare-metal worker"

[[bin]]
name = "wt-local"
path = "src/main.rs"

[dependencies]
wt-api = { workspace = true }
wt-libvirt = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
