[package]
name = "wt-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Provider-neutral world lifecycle contracts for wt"

[dependencies]
wt-api = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
