[package]
name = "wt-server-setup"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Ubuntu 24.04 server installer for wt"

[[bin]]
name = "wt-server-setup"
path = "src/main.rs"

[dependencies]
wt-command = { workspace = true }
wt-libvirt = { workspace = true }
wt-provider = { workspace = true }
wt-server = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ssh-key = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = "3.27.0"
