[package]
name = "wt-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Unix-socket control-plane daemon and bare-metal worker"

[[bin]]
name = "wt-server"
path = "src/main.rs"

[dependencies]
wt-api = { workspace = true }
wt-libvirt = { workspace = true }
wt-provider = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = "3.27.0"
