[package]
name = "wt-setup"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Ubuntu 24.04 site installer for wt"

[[bin]]
name = "wt-setup"
path = "src/main.rs"

[dependencies]
wt-libvirt = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
