[package]
name = "wt-static-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Existing-machine OpenSSH provider for wt"

[dependencies]
wt-api = { workspace = true }
wt-provider = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ssh-key = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
