[package]
name = "wt"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Local CLI: agent client and SSH Host management"

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
wt-api = { workspace = true }
# clap, reqwest, tokio, toml — add when implementing
